<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">apm</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="btn_practice">Practice</string>
    <string name="message_under_construction">Under Construction</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_dash1">Intro</string>
    <string name="title_activity_dash0">Android first contact</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dash1_settings">User preferences</string>
    <string name="pref_form_title">Test form</string>
    <string name="pref_checkbox">4G Use</string>
    <string name="pref_checkbox_summ">CheckBox Test</string>
    <string name="pref_edittext">Name</string>
    <string name="pref_edittext_summ">EditText Test</string>
    <string name="pref_list">Province</string>
    <string name="pref_list_summ">List Test</string>
    <string name="title_activity_about">About</string>
    <string name="author">Author</string>
    <string name="email">E-mail</string>
    <string name="sourcecode">Source</string>
    <string name="title_activity_dash2">Sensors</string>
    <string name="title_activity_dash3">Geolocation</string>
    <string name="title_activity_dash4">Multimedia</string>
    <string name="album_name">APM_PR4</string>
    <string name="btnIntend">Hacer Foto</string>
    <string name="cannot">Cannot</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">        Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    <string name="title_activity_gallery_image">GalleryImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    
     <string name="pref_location_method">Geolocation method</string>
    <string name="pref_location_method_summ">Reverse geolocation method</string>
	<string name="pref_location_method_title">Select method</string>

	
    <!-- User interface labels and strings -->

    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>
    
    <string name="get_location_alternative">Alternative Loc.</string>
     <string name="get_address_alternative">Alternative Addr.</string>
     <string name="get_intent_map">View Map</string>
     
    <string name="Share">Share</string>
     
      <string name="title_activity_preferences">Preferences</string>
	
	<string name="save_xml">Start XML</string>
	<string name="not_save_xml">Stop XML</string>
	<string name="open_contact">Open Contact</string>
	 
</resources>
